# strdemo

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/strmap/: asgi.py  settings.py  wsgi.py
backend/units/: tests.py  urls.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  index.css  main.ts
frontend/src/components/: FlagIcon.vue  Listings.vue  Map.vue  Navbar.vue
frontend/src/components/__tests__/: Listings.spec.ts  Navbar.spec.ts
strmap/: manage.py
strmap/strmap/: urls.py
strmap/units/: models.py  views.py
strmap/units/migrations/: 0001_initial.py
